Fix logo/sidebar alignment on two-column mode
(margins get lost/combined into larger one unless container... stuff;
on three-column flexbox takes care of this for us)

--- a/resources/screen-desktop-mid.less
+++ b/resources/screen-desktop-mid.less
@@ -14,6 +14,12 @@
 	position: relative;
 }
 
+#mw-site-navigation {
+	// Force the portlet margins to apply at the top too
+	// No I don't know how to do this properly
+	padding-top: 0.01em;
+}
+
 #mw-related-navigation > div.sidebar-chunk:first-child {
 	margin-top: 0;
 }
