--- a/resources/screen-desktop.less
+++ b/resources/screen-desktop.less
@@ -136,6 +136,6 @@
 /* Content */
 
 #mw-content-container {
-	margin-top: @fixed-header-height;
+	margin-top: @fixed-header-height + @color-height;
 	padding-bottom: 1em;
 }
